# node-api/docs/swagger_output.json
@@ -14,6 +14,18 @@
     "/get-all-banks": {
       "get": {
         "description": "",
+        "parameters": [
+          {
+            "name": "org",
+            "in": "query",
+            "type": "integer"
+          },
+          {
+            "name": "channel",
+            "in": "query",
+            "type": "integer"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -25,6 +37,16 @@
       "get": {
         "description": "",
         "parameters": [
+          {
+            "name": "org",
+            "in": "query",
+            "type": "integer"
+          },
+          {
+            "name": "channel",
+            "in": "query",
+            "type": "integer"
+          },
           {
             "name": "id",
             "in": "query",
@@ -45,6 +67,16 @@
       "post": {
         "description": "",
         "parameters": [
+          {
+            "name": "org",
+            "in": "query",
+            "type": "integer"
+          },
+          {
+            "name": "channel",
+            "in": "query",
+            "type": "integer"
+          },
           {
             "name": "body",
             "in": "body",
@@ -73,6 +105,16 @@
         "description": "",
         "parameters": [
           {
+            "name": "org",
+            "in": "query",
+            "type": "integer"
+          },
+          {
+            "name": "channel",
+            "in": "query",
+            "type": "integer"
+          },
+          {
             "name": "body",
             "in": "body",
             "schema": {
@@ -99,6 +141,16 @@
       "post": {
         "description": "",
         "parameters": [
+          {
+            "name": "org",
+            "in": "query",
+            "type": "integer"
+          },
+          {
+            "name": "channel",
+            "in": "query",
+            "type": "integer"
+          },
           {
             "name": "body",
             "in": "body",
@@ -127,6 +179,16 @@
         "description": "",
         "parameters": [
           {
+            "name": "org",
+            "in": "query",
+            "type": "integer"
+          },
+          {
+            "name": "channel",
+            "in": "query",
+            "type": "integer"
+          },
+          {
             "name": "body",
             "in": "body",
             "schema": {
@@ -154,6 +216,16 @@
         "description": "",
         "parameters": [
           {
+            "name": "org",
+            "in": "query",
+            "type": "integer"
+          },
+          {
+            "name": "channel",
+            "in": "query",
+            "type": "integer"
+          },
+          {
             "name": "body",
             "in": "body",
             "schema": {
@@ -180,6 +252,16 @@
       "patch": {
         "description": "",
         "parameters": [
+          {
+            "name": "org",
+            "in": "query",
+            "type": "integer"
+          },
+          {
+            "name": "channel",
+            "in": "query",
+            "type": "integer"
+          },
           {
             "name": "body",
             "in": "body",
@@ -216,6 +298,23 @@
     "/get-person": {
       "get": {
         "description": "",
+        "parameters": [
+          {
+            "name": "org",
+            "in": "query",
+            "type": "integer"
+          },
+          {
+            "name": "channel",
+            "in": "query",
+            "type": "integer"
+          },
+          {
+            "name": "id",
+            "in": "query",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -230,6 +329,16 @@
       "post": {
         "description": "",
         "parameters": [
+          {
+            "name": "org",
+            "in": "query",
+            "type": "integer"
+          },
+          {
+            "name": "channel",
+            "in": "query",
+            "type": "integer"
+          },
           {
             "name": "body",
             "in": "body",
